# Azure-Kinect-alignment-with-CUDA

./: CMakeLists.txt  Findk4a.cmake  README.md  comparison.cpp  cuda_k4a_align.cu  cuda_k4a_align.h  main.cpp
cmake/: Findk4a.cmake
